fix(ui5-file-uploader): align vertically input and the button

--- a/packages/main/src/themes/FileUploader.css
+++ b/packages/main/src/themes/FileUploader.css
@@ -21,6 +21,7 @@
 
 .ui5-file-uploader-mask {
 	display: flex;
+	align-items: center;
 }
 
 .ui5-file-uploader-mask [ui5-input] {
